--- a/samples/day14/position-styles.css
+++ b/samples/day14/position-styles.css
@@ -1,6 +1,6 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 /*
@@ -19,24 +19,23 @@ id : 100
 element styling : 1
 */
 
-
 .position {
-    width: 100px;
-    height: 100px;
-    background-color: yellowgreen;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-
+  width: 100px;
+  height: 100px;
+  background-color: yellowgreen;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
 }
 
 img {
-    position: sticky;
-    top: 0;
+  position: sticky;
+  margin-top: 200px;
+  top: 200px;
 }
 
 .container {
-    width: 100px;
-    height: 2000px;
-    background-color: violet;
+  width: 300px;
+  height: 2000px;
+  background-color: violet;
 }
